<resources>
    <string name="app_name">MHT-CET</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adsUnit">ca-app-pub-6144020211629189/4430851368</string>
    <string name="adUnit">ca-app-pub-6144020211629189/1834029062</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stack_of_book">stack_of_book</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="google">google</string>
    <string name="face_ads_start_test">703938540845287_704262494146225</string>
    <string name="e_mail_id">E-Mail ID</string>
    <string name="dont_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="r">R</string>
    <string name="email_id">Email-ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit_text">edit_text</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="_1_25">1/25</string>
    <string name="_20_00_min">20:00 min</string>
    <string name="submit">Submit</string>
    <string name="physics">Physics</string>
    <string name="book">book</string>
    <string name="drawer">drawer</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="mark_for_review">Mark for Review</string>
    <string name="view_answers">VIEW ANSWERS</string>
    <string name="re_attempt">RE-ATTEMPT</string>
    <string name="time_taken">Time Taken</string>
    <string name="_5_min">5 min</string>
    <string name="your_score_is">Your Score is :</string>
    <string name="_45">45</string>
    <string name="total_questions">Total Questions</string>
    <string name="_20">20</string>
    <string name="check_your_ranking_in_leaderboard">Check Your Ranking in LeaderBoard</string>
    <string name="un_attempted">Un-Attempted</string>
    <string name="_15">15</string>
    <string name="wrong"></string>
    <string name="correct">CORRECT</string>
    <string name="unattempt">unattempt</string>
    <string name="ques">ques</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="category">Category</string>
    <string name="test_no_2">Test No. 2</string>
    <string name="questions">Questions</string>
    <string name="_5">5</string>
    <string name="best_score">Best Score</string>
    <string name="_80">80</string>
    <string name="time">Time</string>
    <string name="_25_min">25 min</string>
    <string name="start">Start</string>
    <string name="exit_test">Submit Test</string>
    <string name="do_you_really_want_to_submit">Do you really want to Submit Test ?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="question">Question</string>
    <string name="a_123">A : 123</string>
    <string name="b_123">B : 123</string>
    <string name="c_123">C : 123</string>
    <string name="d_123">D : 123</string>
    <string name="cat_name">Cat Name</string>
    <string name="textview">TextView</string>
    <string name="total_users_0">Total Users : 0</string>
    <string name="you">You</string>
    <string name="score_0">Score : 0</string>
    <string name="rank">RANK</string>
    <string name="na">NA</string>
    <string name="overall_nscore">OVERALL \nSCORE</string>
    <string name="_0">0</string>
    <string name="logout">LogOut</string>
    <string name="n">N</string>
    <string name="_1">100</string>
    <string name="question_no_1">Question No 1</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="answered">Answered</string>
    <string name="unanswered">UnAnswered</string>
    <string name="not_visited">Not Visited</string>
    <string name="review">Review</string>
    <string name="a">A</string>
    <string name="name">Name</string>
    <string name="score_90">Score : 90</string>
    <string name="rank_na">Rank - NA</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="my_profile">My Profile</string>
    <string name="saved_questions">Saved Questions</string>
    <string name="wrongsc">WRONG</string>
    <string name="more_will_be_added_soon">More will be Added Soon..</string>

</resources>