<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/round_view"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quesNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_no_1"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="56dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:text="@string/question" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_123"
        android:id="@+id/optionA"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_123"
        android:id="@+id/optionB"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_123"
        android:id="@+id/optionC"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_123"
        android:id="@+id/optionD"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wrong"
        android:text="@string/wrong"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/correct"
        android:text="@string/correct"
        android:layout_marginTop="8dp"
        android:textColor="@color/green"

        />

</LinearLayout>