<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark_selected"
            android:title="@string/saved_questions" />
    </group>
</menu>