<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="sanjay.mhtcet.finalproject2.QuestionsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:id="@+id/top_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_25"
            android:id="@+id/tv_quesID"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_00_min"
            android:layout_weight="1"
            android:id="@+id/tv_timer"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submitBtn"
            android:background="@drawable/button_border"
            android:textColor="@color/white"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll4"
        android:background="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_layout"
        android:padding="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physics"
            android:id="@+id/qa_catName"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_bookmark"
            android:id="@+id/qa_bookmark"
            android:layout_weight="1"
            android:contentDescription="@string/book" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ques_list_gridB"
            android:src="@drawable/ic_right_menu"
            android:contentDescription="@string/drawer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll3"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        >

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:srcCompat="@drawable/ic_left"-->
<!--            android:background="@color/purple_200"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:contentDescription="@string/todo"-->
<!--            android:id="@+id/prev_quesB"-->
<!--            />-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/clear_selection"
            android:textColor="@color/white"
            android:id="@+id/clear_selectionB"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/mark_for_review"
            android:id="@+id/markB"
            android:textColor="@color/white"
            />

<!--        <ImageButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:srcCompat="@drawable/ic_right"-->
<!--            android:background="@color/purple_200"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:id="@+id/next_quesB"-->
<!--            android:contentDescription="@string/todo" />-->
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/questions_view"
        app:layout_constraintBottom_toTopOf="@+id/ll3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll4"
        android:layout_margin="8dp"
        >


    </androidx.recyclerview.widget.RecyclerView>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/mark_img"
        android:visibility="invisible"
        android:src="@drawable/marked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll4"
        android:elevation="5dp"
        android:layout_marginEnd="16dp"

        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>