<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LoginTheme"
    tools:context="sanjay.mhtcet.finalproject2.SignUpActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="back"
        android:elevation="3dp"
        android:padding="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/stack_of_books" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"

            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/edit_layout"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginBottom="16dp"
    >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="username"
            android:textColorHint="@color/hintColor"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:textColorHint="@color/hintColor"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/hintColor"
            android:autofillHints="password"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:textColorHint="@color/hintColor"
            android:backgroundTint="@color/purple_500"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black" />


</LinearLayout>



    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corner_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:elevation="5dp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>