<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="sanjay.mhtcet.finalproject2.StartTestActivity">

    <TextView
        android:id="@+id/st_cat_name"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/st_testNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/test_no_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll2"
       />

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/ll2"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/start_testB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        android:layout_weight="1"
        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"

        >
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/question"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="13sp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:id="@+id/st_totalQues"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"

                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/award"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_score"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_80"
                    android:id="@+id/st_best_score"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp"

                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/clock"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="13sp"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_min"
                    android:id="@+id/st_time"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:id="@+id/start_testB"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/start"
        android:background="@drawable/round_corner_button"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:elevation="5dp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:id="@+id/st_backB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"

        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>